demo-route/base/app1-v1/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nginx1
  name: demo-route
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: nginx1svc
